--- a/app/views/quizzes/index.html.erb
+++ b/app/views/quizzes/index.html.erb
@@ -1,1 +1,11 @@
 <h1>Make Quizへようこそ！</h1>
+
+    <div class="main">
+      問題<p class="title" id="q">問題１</p>
+      <ul class="question">
+        <li class="ans">A</li>
+        <li class="ans">B</li>
+        <li class="ans">C</li>
+        <li class="ans">D</li>
+      </ul>
+    </div>
