--- a/app/assets/stylesheets/quizzes.scss
+++ b/app/assets/stylesheets/quizzes.scss
@@ -1,3 +1,48 @@
 // Place all the styles related to the quizzes controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+body {
+  padding: 0;
+  margin: 0;
+}
+
+.container {
+  width: 1000px;
+  height: 1000px;
+  background: lemonchiffon;
+  margin: 0 auto;
+  padding: 42px;
+
+}
+
+.main {
+  width: 800px;
+  height: 800px;
+  background: rgba(213, 255, 205, 0.705);
+  margin: 0 auto;
+
+}
+
+.title {
+  font-size: 24px;
+  margin-top: 16px;
+}
+
+.question {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+
+}
+
+.question > li {
+  padding: 16px;
+  margin: 8px;
+  border: lightcoral 2px solid;
+  cursor: pointer;
+}
+
+.question > li:hover {
+  opacity: 0.5;
+}
