--- a/app/views/quizzes/index.html.erb
+++ b/app/views/quizzes/index.html.erb
@@ -1,5 +1,5 @@
 <h1>Make Quizへようこそ！</h1>
-
+  <div class="container">
     <div class="main">
       問題<p class="title" id="q">問題１</p>
       <ul class="question">
@@ -9,3 +9,4 @@
         <li class="ans">D</li>
       </ul>
     </div>
+  </div>
