--- a/app/assets/stylesheets/quizzes.scss
+++ b/app/assets/stylesheets/quizzes.scss
@@ -9,7 +9,7 @@ body {
 
 .container {
   width: 1000px;
-  height: 1000px;
+  height: 550px;
   background: lemonchiffon;
   margin: 0 auto;
   padding: 42px;
@@ -18,9 +18,10 @@ body {
 
 .main {
   width: 800px;
-  height: 800px;
+  height: 500px;
   background: rgba(213, 255, 205, 0.705);
   margin: 0 auto;
+  padding: 24px;
 
 }
 
@@ -41,6 +42,7 @@ body {
   margin: 8px;
   border: lightcoral 2px solid;
   cursor: pointer;
+  margin-bottom: 24px;
 }
 
 .question > li:hover {
