--- a/app/views/quizzes/top.html.erb
+++ b/app/views/quizzes/top.html.erb
@@ -1,3 +1,5 @@
-<h1>Make Quizへようこそ！</h1>
+<div class="top-main">
+ <h1 class="top-title">Make Quizへようこそ！</h1>
 
-<%= link_to  "クイズを始める", quizzes_path %>
+ <%= link_to  "クイズを始める", quizzes_path %>
+</div>
