--- a/app/views/quizzes/top.html.erb
+++ b/app/views/quizzes/top.html.erb
@@ -2,4 +2,6 @@
  <h1 class="top-title">Make Quizへようこそ！</h1>
 
  <%= link_to  "クイズを始める", quizzes_path %>
+ <%= link_to  "ログイン", new_user_session_path%>
+ <%= link_to  "新規登録", new_user_registration_path %>
 </div>
