--- a/app/assets/stylesheets/quizzes.scss
+++ b/app/assets/stylesheets/quizzes.scss
@@ -54,10 +54,31 @@ body {
   background-position: center;
   height: 100vh;
   width: 100vw;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+}
+
+.top-title-area {
+  width: 600px;
+  height: 100px;
+  background: red;
+  margin: 0 auto;
+  padding: 12px;
+
 }
 
 .top-title {
   padding: 0;
   margin: 0;
+  font-size: 48px;
+  color: #fff;
+  text-align: center;
+}
 
+.start-list {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+  display: flex;
 }
