--- a/app/views/quizzes/top.html.erb
+++ b/app/views/quizzes/top.html.erb
@@ -1,7 +1,13 @@
 <div class="top-main">
- <h1 class="top-title">Make Quizへようこそ！</h1>
 
- <%= link_to  "クイズを始める", quizzes_path %>
- <%= link_to  "ログイン", new_user_session_path%>
- <%= link_to  "新規登録", new_user_registration_path %>
+  <div class="top-title-area">
+    <h1 class="top-title">Make Quizへようこそ！</h1>
+  </div>
+
+ <ul class="start-list">
+  <li><%= link_to  "クイズを始める", quizzes_path %></li>
+  <li><%= link_to  "ログイン", new_user_session_path %></li>
+  <li><%= link_to  "新規登録", new_user_registration_path %></li>
+ </ul>
+ 
 </div>
