--- a/app/views/quizzes/index.html.erb
+++ b/app/views/quizzes/index.html.erb
@@ -3,11 +3,11 @@
     <div class="main">
       問題<p class="title" id="q">問題１</p>
       <ul class="question">
-        <li class="ans">A</li>
-        <li class="ans">B</li>
-        <li class="ans">C</li>
-        <li class="ans">D</li>
+        <li class="answer">A</li>
+        <li class="answer">B</li>
+        <li class="answer">C</li>
+        <li class="answer">D</li>
       </ul>
     </div>
-    
+
   </div>
