--- a/app/assets/stylesheets/quizzes.scss
+++ b/app/assets/stylesheets/quizzes.scss
@@ -80,5 +80,12 @@ body {
   list-style: none;
   padding: 0;
   margin: 0;
-  display: flex;
+}
+
+.list {
+  color: #fff;
+}
+
+.list:hover {
+  opacity: 0.7;
 }
