--- a/app/views/quizzes/top.html.erb
+++ b/app/views/quizzes/top.html.erb
@@ -5,9 +5,9 @@
   </div>
 
  <ul class="start-list">
-  <li><%= link_to  "クイズを始める", quizzes_path %></li>
-  <li><%= link_to  "ログイン", new_user_session_path %></li>
-  <li><%= link_to  "新規登録", new_user_registration_path %></li>
+  <li><%= link_to  "クイズを始める", quizzes_path, class:"list" %></li>
+  <li><%= link_to  "ログイン", new_user_session_path, class:"list" %></li>
+  <li><%= link_to  "新規登録", new_user_registration_path, class:"list" %></li>
  </ul>
- 
+
 </div>
