--- a/app/assets/stylesheets/quizzes.scss
+++ b/app/assets/stylesheets/quizzes.scss
@@ -55,8 +55,15 @@ body {
   height: 100vh;
   width: 100vw;
   display: flex;
+  justify-content: center;
   align-items: center;
-  flex-direction: column;
+}
+
+.top-container {
+  width: 70%;
+  height: 300px;
+  background-color: aqua;
+  margin: 0 auto;
 }
 
 .top-title-area {
@@ -80,6 +87,9 @@ body {
   list-style: none;
   padding: 0;
   margin: 0;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
 }
 
 .list {
