--- a/app/views/quizzes/top.html.erb
+++ b/app/views/quizzes/top.html.erb
@@ -1,13 +1,13 @@
 <div class="top-main">
+  <div class="top-container">
+    <div class="top-title-area">
+      <h1 class="top-title">Make Quizへようこそ！</h1>
+    </div>
 
-  <div class="top-title-area">
-    <h1 class="top-title">Make Quizへようこそ！</h1>
+    <ul class="start-list">
+      <li><%= link_to  "クイズを始める", quizzes_path, class:"list" %></li>
+      <li><%= link_to  "ログイン", new_user_session_path, class:"list" %></li>
+      <li><%= link_to  "新規登録", new_user_registration_path, class:"list" %></li>
+    </ul>
   </div>
-
- <ul class="start-list">
-  <li><%= link_to  "クイズを始める", quizzes_path, class:"list" %></li>
-  <li><%= link_to  "ログイン", new_user_session_path, class:"list" %></li>
-  <li><%= link_to  "新規登録", new_user_registration_path, class:"list" %></li>
- </ul>
-
 </div>
