--- a/app/views/quizzes/top.html.erb
+++ b/app/views/quizzes/top.html.erb
@@ -1,7 +1,7 @@
 <div class="top-main">
   <div class="top-container">
     <div class="top-title-area">
-      <h1 class="top-title">Make Quizへようこそ！</h1>
+      <h1 class="top-title">Make Quiz</h1>
     </div>
 
     <ul class="start-list">
