--- a/app/assets/stylesheets/quizzes.scss
+++ b/app/assets/stylesheets/quizzes.scss
@@ -62,7 +62,7 @@ body {
 .top-container {
   width: 70%;
   height: 300px;
-  background-color: aqua;
+  // background-color: aqua;
   margin: 0 auto;
 }
 
