--- a/app/views/quizzes/top.html.erb
+++ b/app/views/quizzes/top.html.erb
@@ -8,7 +8,7 @@
       <li><%= link_to  "クイズを始める", quizzes_path, class:"list" %></li>
       <li><%= link_to  "ログイン", new_user_session_path, class:"list" %></li>
       <li><%= link_to  "新規登録", new_user_registration_path, class:"list" %></li>
-      <li><%= link_to  "ログアウト", destroy_user_session_path, class:"list" %></li>
+      <li><%= link_to  "ログアウト", destroy_user_session_path,method: :delete, class:"list" %></li>
     </ul>
   </div>
 </div>
