--- a/app/assets/stylesheets/quizzes.scss
+++ b/app/assets/stylesheets/quizzes.scss
@@ -78,7 +78,7 @@ body {
 .top-title {
   padding: 0;
   margin: 0;
-  font-size: 48px;
+  font-size: 64px;
   color: #fff;
   text-align: center;
 }
@@ -87,15 +87,26 @@ body {
   list-style: none;
   padding: 0;
   margin: 0;
+  margin-top: 32px;
+
   display: flex;
   justify-content: space-around;
   align-items: center;
 }
 
 .list {
+  margin-top: 16px;
+  padding: 16px;
+  border-radius: 24px;
   color: #fff;
+  background-color: aqua;
+  font-size: 24px;
+  transition: background-color 1s;
 }
 
 .list:hover {
-  opacity: 0.7;
+  color: #fff;
+  text-decoration: none;
+  opacity: 0.8;
+  background-color: brown;
 }
