--- a/app/views/quizzes/top.html.erb
+++ b/app/views/quizzes/top.html.erb
@@ -5,10 +5,14 @@
     </div>
 
     <ul class="start-list">
-      <li><%= link_to  "クイズを始める", quizzes_path, class:"list" %></li>
+      <li><%= link_to  "Let's Start Qiuz", quizzes_path, class:"list" %></li>
+      <% if user_signed_in? %>
+      <li><%= link_to  "ログアウト", destroy_user_session_path,method: :delete, class:"list" %></li>
+      <li class="list"><%= @user.name %>さん</li>
+      <% else %>
       <li><%= link_to  "ログイン", new_user_session_path, class:"list" %></li>
       <li><%= link_to  "新規登録", new_user_registration_path, class:"list" %></li>
-      <li><%= link_to  "ログアウト", destroy_user_session_path,method: :delete, class:"list" %></li>
+      <% end %>
     </ul>
   </div>
 </div>
