--- a/app/views/quizzes/top.html.erb
+++ b/app/views/quizzes/top.html.erb
@@ -5,11 +5,11 @@
     </div>
 
     <ul class="start-list">
-      <li><%= link_to  "Let's Start Qiuz", quizzes_path, class:"list" %></li>
+      <li><%= link_to  "Let's Start Qiuz", quizzes_path, class:"list txt1" %></li>
       <% if user_signed_in? %>
-      <li><%= link_to  "クイズ作成", root_path, class:"list" %></li>
-      <li><%= link_to  "ログアウト", destroy_user_session_path,method: :delete, class:"list" %></li>
-      <li><%= link_to  "#{@user.name}さん", user_path(@user), class:"list" %></li>
+      <li><%= link_to  "クイズ作成", root_path, class:"list txt2" %></li>
+      <li><%= link_to  "ログアウト", destroy_user_session_path,method: :delete, class:"list txt3" %></li>
+      <li><%= link_to  "#{@user.name}さん", user_path(@user), class:"list txt4" %></li>
       <% else %>
       <li><%= link_to  "ログイン", new_user_session_path, class:"list" %></li>
       <li><%= link_to  "新規登録", new_user_registration_path, class:"list" %></li>
