--- a/app/assets/stylesheets/quizzes.scss
+++ b/app/assets/stylesheets/quizzes.scss
@@ -131,16 +131,16 @@ body {
 }
 
 .txt1:hover {
-  background-color: rgb(165, 42, 132);
+  background-color: rgb(165, 42, 87);
 }
 .txt2:hover {
-  background-color: rgb(42, 165, 89);
+  background-color: rgb(52, 229, 120);
 }
 .txt3:hover {
-  background-color: rgb(234, 254, 81);
+  background-color: rgba(254, 245, 81, 0.888);
 }
 .txt4:hover {
-  background-color: rgba(85, 92, 232, 0.731);
+  background-color: rgba(74, 85, 240, 0.808);
 }
 
 @keyframes fadeIn {
@@ -161,5 +161,28 @@ body {
     transform: translate(0px, 450px);
 
   }
+}
+@keyframes NameIn {
+  from {
+    opacity: 0.7;
+  }
+  to {
+    transform: translate(1300px, 0px);
+
+  }
+}
+
+.user-name {
+  font-size: 42px;
+  text-align: center;
+  margin-top: 64px;
+  background-color: #fff;
+  position: relative;
+  right: 1300px;
+
+  animation-name: NameIn;
+  animation-duration: 1.5s; /* アニメーションの長さ */
+  animation-fill-mode: forwards; 
+
 }
 
