--- a/app/views/quizzes/top.html.erb
+++ b/app/views/quizzes/top.html.erb
@@ -9,11 +9,16 @@
       <% if user_signed_in? %>
       <li><%= link_to  "クイズ作成", root_path, class:"list txt2" %></li>
       <li><%= link_to  "ログアウト", destroy_user_session_path,method: :delete, class:"list txt3" %></li>
-      <li><%= link_to  "#{@user.name}さん", user_path(@user), class:"list txt4" %></li>
       <% else %>
       <li><%= link_to  "ログイン", new_user_session_path, class:"list" %></li>
       <li><%= link_to  "新規登録", new_user_registration_path, class:"list" %></li>
       <% end %>
     </ul>
+    <% if user_signed_in? %>
+     <div class="user-name">
+        ようこそ<%= @user.name %>さん
+     </div>
+     <% end %>
   </div>
+
 </div>
