--- a/app/assets/stylesheets/quizzes.scss
+++ b/app/assets/stylesheets/quizzes.scss
@@ -175,8 +175,9 @@ body {
 .user-name {
   font-size: 42px;
   text-align: center;
-  margin-top: 64px;
-  background-color: #fff;
+  margin: 72px auto;
+  width: 60%;
+  background-color: lemonchiffon;
   position: relative;
   right: 1300px;
 
