--- a/app/assets/stylesheets/quizzes.scss
+++ b/app/assets/stylesheets/quizzes.scss
@@ -61,8 +61,8 @@ body {
 }
 
 .top-container {
-  width: 70%;
-  height: 300px;
+  width: 80%;
+  height: 80%;
   // background-color: aqua;
   margin: 0 auto;
   position: absolute;
