--- a/app/views/quizzes/top.html.erb
+++ b/app/views/quizzes/top.html.erb
@@ -1,6 +1,6 @@
 <div class="top-main">
   <div class="top-container">
-  <span>開ける</span>
+  <i class="fas fa-bars"></i>
     <div class="top-title-area">
       <h1 class="top-title">Make Quiz</h1>
     </div>
