--- a/app/views/quizzes/top.html.erb
+++ b/app/views/quizzes/top.html.erb
@@ -1,6 +1,11 @@
 <div class="top-main">
   <div class="top-container">
-  <i class="fas fa-bars"></i>
+  <i class="fas fa-bars bar" id="open"></i>
+  <%
+=begin%>
+ <div class="menu">menu</div> 
+<%
+=end%>
     <div class="top-title-area">
       <h1 class="top-title">Make Quiz</h1>
     </div>
