--- a/app/assets/stylesheets/quizzes.scss
+++ b/app/assets/stylesheets/quizzes.scss
@@ -55,8 +55,8 @@ body {
   background-position: center;
   height: 100vh;
   width: 100vw;
-  display: flex;
-  justify-content: center;
+   display: flex;
+   justify-content: center;
   align-items: center;
 }
 
@@ -87,7 +87,27 @@ body {
   
 }
 
+.bar {
+  font-size: 30px;
+  color: #fff;
+}
 
+.menu {
+  height: 500px;
+  width: 200px;
+  background-color: #fff;
+  position: relative;
+  right: 400px;
+}
+
+
+.show {
+  display: block;
+}
+
+.hide {
+  display: none;
+}
 
 .top-title {
   padding: 0;
