--- a/app/assets/stylesheets/quizzes.scss
+++ b/app/assets/stylesheets/quizzes.scss
@@ -63,7 +63,6 @@ body {
 .top-container {
   width: 80%;
   height: 80%;
-  // background-color: aqua;
   margin: 0 auto;
   position: absolute;
 }
@@ -75,7 +74,7 @@ body {
   margin: 0 auto;
   padding: 12px;
   animation-name: In;
-  animation-duration: 1.5s; /* アニメーションの長さ */
+  animation-duration: 1.5s;
   animation-fill-mode: forwards; 
   position: relative;
   top:-500px;
