--- a/app/assets/stylesheets/quizzes.scss
+++ b/app/assets/stylesheets/quizzes.scss
@@ -10,7 +10,7 @@ body {
 .container {
   width: 100vw;
   height: 100vh;
-  background: lemonchiffon;
+  // background: lemonchiffon;
   padding-top: 64px;
 }
 
