--- a/app/assets/stylesheets/quizzes.scss
+++ b/app/assets/stylesheets/quizzes.scss
@@ -17,7 +17,7 @@ body {
 .main {
   width: 60vw;
   height: 60vh;
-  background: rgba(213, 255, 205, 0.705);
+  // background: rgba(213, 255, 205, 0.705);
   margin: 0 auto;
   padding: 24px;
 
