--- a/app/views/quizzes/index.html.erb
+++ b/app/views/quizzes/index.html.erb
@@ -1,7 +1,8 @@
   <div class="container">
 
     <div class="main">
-      問題<p class="title" id="q">問題１</p>
+      <mark>問題</mark>
+      <p class="title" id="q">問題１</p>
       <ul class="question">
         <li class="answer">A</li>
         <li class="answer">B</li>
